apps/base/anytype/anytype.yaml
apiVersion: v1
kind: Service
metadata:
  name: anytype
  namespace: app-anytype
spec:
  selector:
    app: anytype
  ports:
    - protocol: TCP
      name: http
      port: 8080
      targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: anytype
  namespace: app-anytype
spec:
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: anytype
  strategy:
    type: RollingUpdate
  rollingUpdate:
    maxUnavailable: 0
    maxSurge: 1
  template:
    metadata:
      labels:
        app: anytype
    spec:
      securityContext:
        fsGroup: 1000
      containers:
        - name: anytype
          image: ghcr.io/wellcaffeinated/anytype-docker:1.0.2
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              cpu: 50m
              memory: 256Mi
            limits:
              cpu: 1000m
              memory: 1Gi
          ports:
            - containerPort: 8080
              name: http
          volumeMounts:
            - mountPath: /home/anytype
              name: anytype-data
      volumes:
        - name: anytype-data
          persistentVolumeClaim:
            claimName: anytype-data
      dnsConfig:
        options:
          - name: ndots
            value: "1"
