apps/base/anytype/redis.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: anytype-redis
  namespace: app-anytype
  labels:
    app: anytype-redis
spec:
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: anytype-redis
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: anytype-redis
    spec:
      containers:
        - name: redis
          image: redis/redis-stack-server:7.2.0-v6
          imagePullPolicy: IfNotPresent
          command:
            - redis-server
          args:
            - --port
            - "6379"
            - --requirepass
            - $(REDIS_PASSWORD)
            - --dir
            - /data
            - --appendonly
            - "yes"
            - --maxmemory
            - 256mb
            - --maxmemory-policy
            - noeviction
            - --protected-mode
            - "no"
            - --loadmodule
            - /opt/redis-stack/lib/redisbloom.so
          ports:
            - name: redis
              containerPort: 6379
              protocol: TCP
          resources:
            requests:
              cpu: 50m
              memory: 256Mi
            limits:
              cpu: 500m
              memory: 512Mi
          readinessProbe:
            exec:
              command:
                - redis-cli
                - --raw
                - -p
                - "6379"
                - --no-auth-warning
                - -a
                - $(REDIS_PASSWORD)
                - incr
                - ping
            initialDelaySeconds: 5
            periodSeconds: 5
            failureThreshold: 12
          livenessProbe:
            exec:
              command:
                - redis-cli
                - --raw
                - -p
                - "6379"
                - --no-auth-warning
                - -a
                - $(REDIS_PASSWORD)
                - incr
                - ping
            initialDelaySeconds: 30
            periodSeconds: 15
            failureThreshold: 5
          volumeMounts:
            - name: redis-data
              mountPath: /data
      volumes:
        - name: redis-data
          persistentVolumeClaim:
            claimName: anytype-redis-data
      dnsConfig:
        options:
          - name: ndots
            value: "1"
---
apiVersion: v1
kind: Service
metadata:
  name: anytype-redis
  namespace: app-anytype
spec:
  type: ClusterIP
  selector:
    app: anytype-redis
  ports:
    - name: redis
      port: 6379
      targetPort: redis
      protocol: TCP
