apps/base/anytype/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: authelia-forwardauth
  namespace: app-anytype
spec:
  forwardAuth:
    address: http://authelia.app-authelia.svc:9091/api/authz/forward-auth?authelia_url=https://auth.cluster.arpa
    trustForwardHeader: true
    authResponseHeaders:
      - Remote-User
      - Remote-Groups
      - Remote-Email
      - Remote-Name
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: anytype-heart
  namespace: app-anytype
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`anytype.decentm.com`)
      kind: Rule
      middlewares:
        - name: authelia-forwardauth
          namespace: app-anytype
      services:
        - name: anytype-heart-server
          port: http
  tls:
    secretName: anytype-heart-tls
